fix homepage spacing

--- a/src/Home.scss
+++ b/src/Home.scss
@@ -147,6 +147,7 @@
 }
 
 .home_section {
+	padding-top: 2rem;
 	@include sm {
 		width: 30rem;
 	}
@@ -170,6 +171,8 @@
 
 	&__title {
 		font-size: 2rem;
+		margin:0;
+		margin-bottom: 0.5rem;
 	}
 
 	&__cards {
